--- a/extensions/aircode-pusher/package.json
+++ b/extensions/aircode-pusher/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "@aircodelabs/pusher",
+  "name": "aircode-pusher",
   "version": "0.1.0",
   "description": "",
-  "main": "src/index.js",
+  "module": "src/index.js",
+  "main": "dist/aircode-pusher.js",
   "type": "module",
   "scripts": {
     "dev": "cross-env AC_FAAS_ROOT=test AC_PORT=3000 run-aircode --init",
