--- a/extensions/aircode-pusher/package.json
+++ b/extensions/aircode-pusher/package.json
@@ -1,9 +1,10 @@
 {
   "name": "aircode-pusher",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "module": "src/index.js",
-  "main": "dist/aircode-pusher.js",
+  "main": "dist/aircode-pusher.cjs",
+  "browser": "dist/aircode-pusher-client.js",
   "type": "module",
   "scripts": {
     "dev": "cross-env AC_FAAS_ROOT=test AC_PORT=3000 run-aircode --init",
