--- a/extensions/aircode-pusher/package.json
+++ b/extensions/aircode-pusher/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aircode-pusher",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "",
   "module": "src/index.js",
   "main": "dist/aircode-pusher.cjs",
@@ -10,6 +10,7 @@
     "dev": "cross-env AC_FAAS_ROOT=test AC_PORT=3000 run-aircode --init",
     "build": "node build",
     "lint": "eslint src",
+    "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
