--- a/examples/CDN-fileuploader-with-bunny/package.json
+++ b/examples/CDN-fileuploader-with-bunny/package.json
@@ -5,5 +5,12 @@
     "mime": "3.0.0",
     "node-fetch": "2.6.12",
     "uglify-js": "3.17.4"
+  },
+  "scripts": {
+    "start": "cross-env AC_FAAS_ROOT=. AC_PORT=3000 run-aircode --init"
+  },
+  "devDependencies": {
+    "@aircodelabs/hydrogen": "^0.2.2",
+    "cross-env": "^7.0.3"
   }
 }
