--- a/examples/chatgpt-plugin/package.json
+++ b/examples/chatgpt-plugin/package.json
@@ -1,22 +1,8 @@
 {
-  "name": "my-app",
-  "version": "1.0.0",
-  "description": "My App",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.ts",
-    "build": "tsc"
-  },
   "dependencies": {
-    "mongodb": "^4.1.1",
-    "mysql2": "^2.3.0",
-    "pg": "^8.7.1",
-    "typescript": "^4.4.3",
-    "zod": "^3.5.0"
-  },
-  "devDependencies": {
-  "@types/node": "^16.9.1",
-    "nodemon": "^2.0.13"
+    "@types/pg": "8.10.2",
+    "aircode": "0.6.1",
+    "pg": "8.11.2",
+    "typescript": "5.1.6"
   }
 }
