Update via AirCode on Aug 15, 2023

--- a/examples/koa-blog/aircode.config.json
+++ b/examples/koa-blog/aircode.config.json
@@ -4,8 +4,7 @@
   "timeout": 60,
   "region": "US",
   "envs": [
-    "EXPERIMENTAL_ROUTE",
-    "DEBUG"
+    "EXPERIMENTAL_ROUTE"
   ],
   "typescript": false
 }
