docs: update langchain docs

--- a/examples/langchain/aircode.config.json
+++ b/examples/langchain/aircode.config.json
@@ -5,8 +5,7 @@
   "envs": [
     "OPENAI_API_KEY",
     "FIELD",
-    "REDIS_URI",
-    "OPENAPI_MODEL"
+    "REDIS_URI"
   ],
   "typescript": true
 }
